Update style and versions