@@ -1,10 +1,7 @@
 buildscript {
-    repositories {
-        mavenCentral()
-    }
     dependencies {
         if (JavaVersion.current() >= JavaVersion.VERSION_11) {
-            classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.25.0'
+            classpath 'com.diffplug.spotless:spotless-plugin-gradle:7.0.2'
         }
     }
 }
@@ -22,18 +19,41 @@ repositories {
 }
 
 configurations {
-    javacJar
     // for putting Error Prone javac in bootclasspath for running tests
     errorproneJavac
     // local dependency
     localDeps
 }
 
-ext.versions = [
-    checkerFramework: "3.42.0-eisop4",
-    errorproneJavacVersion: "9+181-r4173-1",
-    errorproneCoreVersion: "2.31.0",
-]
+ext {
+    versions = [
+        checkerFramework: "3.42.0-eisop5",
+        errorproneJavacVersion: "9+181-r4173-1",
+        errorproneCoreVersion: "2.36.0",
+    ]
+
+    // Keep in sync with the same variable in checker-framework/build.gradle
+    compilerArgsForRunningCF = [
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-opens',
+        'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+    ]
+}
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -66,9 +86,6 @@ dependencies {
         localDeps "io.github.eisop:checker-util:${versions.checkerFramework}"
     }
 
-    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
-        javacJar group: 'com.google.errorprone', name: 'javac', version: "${versions.errorproneJavacVersion}"
-    }
     errorprone "com.google.errorprone:error_prone_core:${versions.errorproneCoreVersion}"
     errorproneJavac "com.google.errorprone:javac:${versions.errorproneJavacVersion}"
 
@@ -77,8 +94,6 @@ dependencies {
     testImplementation "io.github.eisop:framework-test:${versions.checkerFramework}"
     testImplementation "org.apache.httpcomponents:httpclient:4.5.14"
     testImplementation "org.springframework:spring-web:5.3.18"
-
-    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
 }
 
 sourceSets {
@@ -114,13 +129,13 @@ if (isJava11plus) {
         format "misc", {
             target "**/.gitignore"
             trimTrailingWhitespace()
-            indentWithTabs()
+            leadingSpacesToTabs()
             endWithNewline()
         }
         groovyGradle {
             target '**/*.gradle'
             greclipse()  // which formatter Spotless should use to format .gradle files.
-            indentWithSpaces(4)
+            leadingTabsToSpaces(4)
             trimTrailingWhitespace()
             // endWithNewline() // Don't want to end empty files with a newline
         }
@@ -152,9 +167,6 @@ publishing {
 
 test {
     inputs.files("tests/networkrequest")
-    if (!JavaVersion.current().java9Compatible) {
-        jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
-    }
 }
 
 test.dependsOn(":assemble")
@@ -163,17 +175,23 @@ assemble.dependsOn(":clean")
 afterEvaluate {
     // Configure JUnit tests
     tasks.withType(Test) {
+        if (!JavaVersion.current().java9Compatible) {
+            jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
+        } else {
+            jvmArgs += compilerArgsForRunningCF
+        }
+
         testLogging {
             // Always run the tests
             outputs.upToDateWhen { false }
             // The following prints out each time a test is passed.
             events "passed", "skipped", "failed", "standardOut", "standardError"
             // Show the found unexpected diagnostics and expected diagnostics not found.
-            exceptionFormat "full"
-            showExceptions true
-            showCauses true
-            showStackTraces true
-            showStandardStreams true
+            exceptionFormat = "full"
+            showExceptions = true
+            showCauses = true
+            showStackTraces = true
+            showStandardStreams = true
         }
         // After each test, print a summary.
         afterSuite { desc, result ->
@@ -200,17 +218,18 @@ afterEvaluate {
         options.compilerArgs += [
             '-g',
             '-Werror',
-            "-Xlint:all",
+            // -options because source 8 is obsolete on newer JDKs
+            "-Xlint:all,-options",
         ]
         options.encoding = 'UTF-8'
         options.fork = true
         if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
             options.forkOptions.jvmArgs += [
-                "-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()
+                "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}".toString()
             ]
             options.errorprone.enabled = false
         } else {
-            options.errorprone.enabled = true
+            options.errorprone.enabled = (JavaVersion.current() >= JavaVersion.VERSION_17)
             options.forkOptions.jvmArgs += [
                 '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                 '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
